--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-28  Glenn Morris  <rgm@gnu.org>
 
+	* cl.texi (Porting Common Lisp, Lexical Bindings):
+	Add some xrefs to the Elisp manual.
+
 	* cl.texi (Lexical Bindings): Move to appendix of obsolete features.
 	(Porting Common Lisp): Emacs Lisp can do true lexical binding now.
 	(Obsolete Features): New appendix.  Move Lexical Bindings here.
