--- a/etc/NEWS
+++ b/etc/NEWS
@@ -323,10 +323,16 @@ The difference is that it relies on the `lexical-binding' machinery (as opposed
 to the `lexical-let' machinery used previously) to capture definitions in
 closures, so such closures will only work if `lexical-binding' is in use.
 
+*** `cl-letf' is not exactly like `letf'.
+
 +++
 *** `progv' was rewritten to use the `let' machinery.
 A side effect is that vars without corresponding value are bound to nil
 rather than making them unbound.
+
+*** The following methods of extending `setf' are obsolete.
+Use gv.el instead (FIXME; details).
+`define-setf-expander', `defsetf', `define-modify-macro'
 
 ** Compilation mode
 +++
