--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* tmm.el (tmm-prompt): Use map-keymap (bug#12744).
+
 2012-10-27  Eli Zaretskii  <eliz@gnu.org>
 
 	* profiler.el (profiler-report-make-entry-part): Fix help-echo
