--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,7 +1,11 @@
+2012-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* frame.c (x_set_font): Catch internal error.
+
 2012-10-27  Eli Zaretskii  <eliz@gnu.org>
 
-	Avoid overflow in w32 implementation of interval timers.  When
-	possible, for ITIMER_PROF count only times the main thread
+	Avoid overflow in w32 implementation of interval timers.
+	When possible, for ITIMER_PROF count only times the main thread
 	actually executes.
 	* w32proc.c <struct itimer_data>: 'expire' and 'reload' are now
 	'volatile ULONGLONG' types.  All the other data which was
@@ -11,8 +15,8 @@
 	for the timer.
 	(timer_loop): Enter critical section when accessing ULONGLONG
 	values of the itimer_data struct, as these accesses are no longer
-	atomic.  Call 'w32_get_timer_time' instead of 'clock'.  Remove
-	unused variable.
+	atomic.  Call 'w32_get_timer_time' instead of 'clock'.
+	Remove unused variable.
 	(init_timers): Initialize s_pfn_Get_Thread_Times.
 	(start_timer_thread): Don't assign itimer->caller_thread here.
 	(getitimer): Assign itimer->caller_thread here.
@@ -92,8 +96,8 @@
 
 2012-10-19  Eli Zaretskii  <eliz@gnu.org>
 
-	* puresize.h (BASE_PURESIZE): Bump the base value to 1700000.  See
-	http://lists.gnu.org/archive/html/emacs-devel/2012-10/msg00593.html
+	* puresize.h (BASE_PURESIZE): Bump the base value to 1700000.
+	See http://lists.gnu.org/archive/html/emacs-devel/2012-10/msg00593.html
 	for the reasons.
 
 	* alloc.c (NSTATICS): Decrease to 0x800.
@@ -712,8 +716,8 @@
 	(ns_clear_frame_area): Remove resize handle code.
 
 	* nsfns.m (ns_in_resize): Remove.
-	(x_set_icon_name, ns_set_name, ns_set_name_as_filename): Remove
-	ns_in_resize check.
+	(x_set_icon_name, ns_set_name, ns_set_name_as_filename):
+	Remove ns_in_resize check.
 
 2012-10-07  Paul Eggert  <eggert@cs.ucla.edu>
 
