--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* minibuffer.el (completion--sifn-requote): Rewrite to handle things
+	like Tramp's "/foo:~bar//baz" -> "/scpc:foo:/baz" mapping (bug#11714).
+
 	* tmm.el (tmm-prompt): Use map-keymap (bug#12744).
 
 2012-10-27  Eli Zaretskii  <eliz@gnu.org>
